--- a/Linear Regression/Linear Regression - Single Variable (area&price).ipynb
+++ b/Linear Regression/Linear Regression - Single Variable (area&price).ipynb
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1d35c95e6d0>"
+       "<matplotlib.collections.PathCollection at 0x1ea9aaf65e0>"
       ]
      },
      "execution_count": 3,
@@ -221,7 +221,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "C:\\Users\\admin\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "c85487d4",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "c13978fe",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "12  7100  1.144709e+06"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8628a80d",
    "metadata": {},
    "outputs": [],
@@ -532,17 +532,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "f9f9cd23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1d3642c2b80>]"
+       "[<matplotlib.lines.Line2D at 0x1ea9b2e2580>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -570,8 +570,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "39276663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We can save our model using pickle library\n",
+    "#pickle is a python module used to convert a Python object into a byte stream to store it in a file/database, maintain program state across sessions, or transport data over the network\n",
+    "'''Pickle is the standard way of serializing objects in Python. \n",
+    "You can use the pickle operation to serialize your machine learning algorithms and save the serialized format to a file. \n",
+    "Later you can load this file to deserialize your model and use it to make new predictions'''\n",
+    "\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7998f0a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#open() is used to open a file in python.\n",
+    "#r = opens a file to read. w = opens a file to write, if the file doesnt exist, it creates a new file.\n",
+    "#t = opens a file in text mode, b = opens a file in binary mode\n",
+    "\n",
+    "#Here, we're opening (creating) a file named 'model_pickle' in binary writing mode with all out python data\n",
+    "#The below statements will save this entire program's python data into a binary file in the same folder.\n",
+    "#We can open and load the 'model_pickle' file into python again and directly use it to predict the price by giving the area without the need to write entire code again \n",
+    "\n",
+    "\n",
+    "with open('model_pickle_area_price', 'wb') as f:\n",
+    "    pickle.dump(reg,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2ce0abf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let us try to load our model_pickle file and check if the prediction works\n",
+    "\n",
+    "with open('model_pickle_area_price', 'rb') as f:\n",
+    "    mp = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "34ba219b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\admin\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([520085.61643836])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mp.predict([[2500]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c7da9e81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\admin\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([520085.61643836])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg.predict([[2500]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3f131a86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Similar to pickle, we can also use scikit joblib to save our prediction model and load it when required.\n",
+    "It is generally said that using scikit joblib is efficient compared to using pickle'''\n",
+    "\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "5434a4a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model_joblib_area_price']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(reg, 'model_joblib_area_price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f8828ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mj = joblib.load('model_joblib_area_price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "757d4441",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\admin\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([520085.61643836])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mj.predict([[2500]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c6ee9e5",
    "metadata": {},
    "outputs": [],
    "source": []
